--- a/parserator_web/templates/parserator_web/index.html
+++ b/parserator_web/templates/parserator_web/index.html
@@ -41,28 +41,22 @@
   <script type="text/javascript">
     /* TODO: Flesh this out to connect the form to the API and render results
     in the #address-results div. */
-    console.log("In extra_js");
+  
     $('.form').submit(event => {
       event.preventDefault();
       let address = $('form').serializeArray()[1].value;
-
+      $('#address-results').css('display', 'none')
+      //clear any previous error messages
+      $('#err_msg').remove();
       
-      
-$.ajax({
+      $.ajax({
         type: 'GET',
         url: "{% url 'address-parse' %}",
         data: {"address": address},
         success: function (response) {
-          // if not valid
-          if(!response["valid"]){
-            console.log('Not Valid')
-          }
           let address = response[1]
-
           let table_str = '';
-
           for (address_component in address) {
-            console.log(address[address_component])
             table_str += `
               <tr>
                 <td> ${address[address_component]} </td>
@@ -70,18 +64,18 @@ $.ajax({
               </tr>`
           }
 
-          let table_body = $('#address-results tbody');
-          table_body.html(table_str)
+          $('#address-results tbody').html(table_str);
+          $('#address-results').css('display', '');
         },
         error: function (response) {
-          console.log("error")
+          let err_msg = `
+            <div id="err_msg" class="alert alert-danger">
+              Error. Unable to parse this address.
+            </div>  
+          `
+          $('#address-results').after(err_msg)
         }
       })
-
-
-
-
-      $('#address-results').css('display', '')
     })
   </script>
 {% endblock %}
