--- a/parserator_web/templates/parserator_web/index.html
+++ b/parserator_web/templates/parserator_web/index.html
@@ -19,7 +19,7 @@
           <button id="submit" type="submit" class="btn btn-success mt-3">Parse!</button>
         </form>
       </div>
-      <!-- TODO: Display parsed address components here. -->
+      <!-- Parsed address components displayed here. -->
       <div id="address-results" style="display:none">
         <h4>Parsing results</h4>
         <p>Address type: <strong><span id="parse-type"></span></strong></p>
@@ -65,27 +65,13 @@
 
           },
           error: function(xhr) {
-            alert('There was an error!');
+            console.log(xhr);
+            alert('There was an error!' + '\n' + xhr.responseJSON['detail']);
           }
         });
 
       });
     });
-
-    // $.ajax({
-    //   url: "/api/parse/",
-    //   type: "get",
-    //   data: {
-    //     $('#address').val()
-    //   },
-    //   success: function(response) {
-    //     // do something
-    //     console.log(response);
-    //   },
-    //   error: function(xhr) {
-    //     // handle error
-    //   }
-    // });
 
   </script>
 {% endblock %}
