--- a/parserator_web/templates/parserator_web/index.html
+++ b/parserator_web/templates/parserator_web/index.html
@@ -41,23 +41,20 @@
 
 {% block extra_js %}
   <script type="text/javascript">
-    /* TODO: Flesh this out to connect the form to the API and render results
-    in the #address-results div. */
 
     $(document).ready(function(){
+      // Use the submit click to grab address value
       $('#submit').click(function(event){
-        console.log($('#address').val());
         event.preventDefault();
 
+        // Get the API response
         $.ajax({
           url: "/api/parse/",
           type: "get",
           data: {"address": $('#address').val()},
           success: function(response) {
 
-            console.log(response);
-            console.log(response.address_components);
-
+            // .map function the array to table rows and append
             var rows = $.map(response.address_components, function(value, key) {
               return '<tr><td>' + key + '</td><td>' + value + '</td></tr>'; 
             });
@@ -65,7 +62,8 @@
 
           },
           error: function(xhr) {
-            console.log(xhr);
+
+            // Something went wrong, here's what
             alert('There was an error!' + '\n' + xhr.responseJSON['detail']);
           }
         });
