Add linting setup

--- a/parserator_web/templates/parserator_web/base.html
+++ b/parserator_web/templates/parserator_web/base.html
@@ -87,10 +87,10 @@
     </footer>
 
     <!-- Load external scripts -->
-    <script src="{% static 'js/jquery.min.js' %}"></script>
-    <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
-    <script src="{% static 'js/fontawesome.min.js' %}"></script>
-    <script src="{% static 'js/solid.min.js' %}"></script>
+    <script src="{% static 'js/lib/jquery.min.js' %}"></script>
+    <script src="{% static 'js/lib/bootstrap.bundle.min.js' %}"></script>
+    <script src="{% static 'js/lib/fontawesome.min.js' %}"></script>
+    <script src="{% static 'js/lib/solid.min.js' %}"></script>
 
     <!-- Load extra scripts -->
     {% block extra_js %}{% endblock %}
