--- a/parserator_web/templates/parserator_web/index.html
+++ b/parserator_web/templates/parserator_web/index.html
@@ -38,8 +38,5 @@
 {% endblock %}
 
 {% block extra_js %}
-  <script type="text/javascript">
-    /* TODO: Flesh this out to connect the form to the API and render results
-    in the #address-results div. */
-  </script>
+  <script src="{% static 'js/index.js' %}"></script>
 {% endblock %}
