fix(everything-is-done): nothing to describe, tests are working, files are written

--- a/parserator_web/templates/parserator_web/index.html
+++ b/parserator_web/templates/parserator_web/index.html
@@ -1,42 +1,60 @@
 {% extends "parserator_web/base.html" %}
 {% load static %}
-
-{% block title %}Home{% endblock %}
-
+{% block title %}
+Home
+{% endblock %}
 {% block body %}
 <div class="container">
   <div class="row pt-5 pb-4">
     <div class="col-12">
-      <h3 id="usaddress-parser"><i class="fa fa-fw fa-map-marker-alt"></i> U.S. address parser</h3>
-      <p>Dealing with some messy or unstructured addresses? We can parse them for you.</p>
+      <h3 id="usaddress-parser">
+        <i class="fa fa-fw fa-map-marker-alt"></i> U.S. address parser
+      </h3>
+      <p>
+        Dealing with some messy or unstructured addresses? We can parse them for
+        you.
+      </p>
       <div class="card card-body bg-light">
-        <p><strong>Try it out!</strong> Parse an address in the United States into fields like <code>AddressNumber</code>, <code>StreetName</code> and <code>ZipCode</code>.</p>
+        <p>
+          <strong>Try it out!</strong> Parse an address in the United States
+          into fields like <code>AddressNumber</code>,
+          <code>StreetName</code> and <code>ZipCode</code>.
+        </p>
         <form class="form" role="form">
           {% csrf_token %}
-          <input name="address" type="text" class="form-control" id="address" placeholder="123 Main St. Suite 100 Chicago, IL">
-          <button id="submit" type="submit" class="btn btn-success mt-3">Parse!</button>
+          <input
+            name="address"
+            type="text"
+            class="form-control"
+            id="address"
+            placeholder="123 Main St. Suite 100 Chicago, IL"
+          />
+          <button id="submit" type="submit" class="btn btn-success mt-3">
+            Parse!
+          </button>
         </form>
       </div>
-      <!-- TODO: Display parsed address components here. -->
-      <div id="address-results" style="display:none">
-        <h4>Parsing results</h4>
-        <p>Address type: <strong><span id="parse-type"></span></strong></p>
-        <table class="table table-bordered">
-          <thead>
-            <tr>
-              <th>Address part</th>
-              <th>Tag</th>
-            </tr>
-          </thead>
-          <tbody>
-          </tbody>
-        </table>
-      </div>
+      <div id="address-results" style="display: none"></div>
     </div>
   </div>
 </div>
 {% endblock %}
-
 {% block extra_js %}
-  <script src="{% static 'js/index.js' %}"></script>
+<script>
+  $(".form").on("submit", function (event) {
+    event.preventDefault();
+    $.ajax({
+      type: "GET",
+      url: "api/parse/",
+      data: $(".form").serialize(),
+    })
+      .done(function (data) {
+        return generateAddressTable(data);
+      })
+      .fail(function () {
+        return generateAddressTable();
+      });
+  });
+</script>
+<script src="{% static 'js/index.js' %}"></script>
 {% endblock %}
