--- a/parserator_web/templates/parserator_web/index.html
+++ b/parserator_web/templates/parserator_web/index.html
@@ -18,8 +18,7 @@
         </form>
       </div>
       <!-- TODO: Display parsed address components here. -->
-      <!-- <div id="address-results" style="display:none"> -->
-      <div id="address-results">
+      <div id="address-results" style="display:none">
         <h4>Parsing results</h4>
         <p>Address type: <strong><span id="parse-type"></span></strong></p>
         <table class="table table-bordered">
