--- a/parserator_web/templates/parserator_web/index.html
+++ b/parserator_web/templates/parserator_web/index.html
@@ -18,6 +18,7 @@
         </form>
       </div>
       <!-- TODO: Display parsed address components here. -->
+      <!-- Add an error div, typically hidden until a failure occurs -->
       <div id="error-results" style="display:none" class="alert alert-danger"></div>
       <div id="address-results" style="display:none">
         <h4>Parsing results</h4>
