--- a/parserator_web/templates/parserator_web/index.html
+++ b/parserator_web/templates/parserator_web/index.html
@@ -11,7 +11,7 @@
       <p>Dealing with some messy or unstructured addresses? We can parse them for you.</p>
       <div class="card card-body bg-light">
         <p><strong>Try it out!</strong> Parse an address in the United States into fields like <code>AddressNumber</code>, <code>StreetName</code> and <code>ZipCode</code>.</p>
-        <form class="form" role="form">
+        <form class="form" role="form" id="form">  
           {% csrf_token %}
           <input name="address" type="text" class="form-control" id="address" placeholder="123 Main St. Suite 100 Chicago, IL">
           <button id="submit" type="submit" class="btn btn-success mt-3">Parse!</button>
@@ -26,6 +26,7 @@
             <tr>
               <th>Address part</th>
               <th>Tag</th>
+              <p id="demo"></p>
             </tr>
           </thead>
           <tbody>
@@ -39,6 +40,87 @@
 
 {% block extra_js %}
   <script type="text/javascript">
+   // connect form to api  -- step3
+    //const csrftoken = document.querySelector('[name=csrfmiddlewaretoken]').value; 
+    document.querySelector('#form').addEventListener('submit', 
+    function() {
+      event.preventDefault()
+      
+      document.getElementById("address-results").style ="";
+      document.getElementById("demo").innerHTML = this.elements.address.value
+    }); 
+    /*function parseAddress() {
+      //get usr information
+      //String usrInput = form.address.value;
+      document.getElementById("demo").innerHTML = form.address.value;
+      document.getElementById("address-results").style ="";
+      //document.getElementById("demo").innerHTML = form.address.value;
+    }
+    */
+      //create request
+     // const request = new Request(
+       // url: "address-parse",
+        //{headers: {'X-CSRFToken': csrftoken}},
+        //data: {"input_data": usrInput}
+      //);
+      /*
+      const headers = new Headers({
+        "Content-Type": "application/json"//,
+        //"Content-Length": JSON.stringify(body).length
+      });
+      const options = {
+        method: "get",
+        headers: headers,
+        body: JSON.stringify(usrInput)
+      };
+      let response = await fetch(url, options);
+
+      if (response.ok) { // if HTTP-status is 200-299
+      // get the response body (the method explained below)
+        let json = await response.json();
+        document.getElementById("address-results").style ="";
+        document.getElementById("demo").innerHTML = json.getObject("address_components");
+        //do something with json
+      } else {
+        alert("HTTP-Error: " + response.status); // change to send server-side error information
+      }
+    }
+      //fetch(request, {
+       // method: 'GET',
+       // mode: 'same-origin'
+      //}).then(function(response) {
+        //handle errors
+       // document.getElementById("address-results").style ="";
+        //document.getElementById("demo").innerHTML = response['address_components'];
+        //document.getElementById("demo").innerHTML = usrInput;
+        //do something with response -- step 4
+      //});
+    //}
+
+    */
+
+
+
+
+
+
+//      var usrInput = document.getElementById("address").value;
+  //    $.ajax({
+    //        url: "api/parse/",
+      //      method: 'get',
+        //    data: {"input_data": usrInput},
+          //  dataType: "text",
+            ///contentType: "application/json",
+          //  error: function(xhr, status, error) {
+            //  console.log("error") //expand for all the error messages that I craft in GET
+           // }
+         // }) 
+         // .done(function(data) {
+           // console.log("good") //step 4, fill out table
+          //});
+      //django request
+      
+  //  }
     /* TODO: Flesh this out to connect the form to the API and render results
     in the #address-results div. */
   </script>
