--- a/parserator_web/templates/parserator_web/index.html
+++ b/parserator_web/templates/parserator_web/index.html
@@ -13,7 +13,7 @@
         <p><strong>Try it out!</strong> Parse an address in the United States into fields like <code>AddressNumber</code>, <code>StreetName</code> and <code>ZipCode</code>.</p>
         <form class="form" role="form" id="form">  
           {% csrf_token %}
-          <input name="address" type="text" class="form-control" id="address" placeholder="123 Main St. Suite 100 Chicago, IL">
+          <input name="address" type="text" class="form-control" id="address" placeholder="123 Main St. Suite 100 Chicago, IL" required="true">
           <button id="submit" type="submit" class="btn btn-success mt-3">Parse!</button>
         </form>
       </div>
@@ -43,12 +43,44 @@
    // connect form to api  -- step3
     //const csrftoken = document.querySelector('[name=csrfmiddlewaretoken]').value; 
     document.querySelector('#form').addEventListener('submit', 
-    function() {
-      event.preventDefault()
-      
-      document.getElementById("address-results").style ="";
-      document.getElementById("demo").innerHTML = this.elements.address.value
-    }); 
+      function() {
+        event.preventDefault();
+        document.getElementById("address-results").style ="";
+        document.getElementById("demo").innerHTML = this.elements.address.value;
+        const headers = new Headers({
+          "Content-Type": "application/json"//,
+          //"Content-Length": JSON.stringify(body).length
+        });
+
+        const options = {
+          method: "get",
+          headers: headers,
+          body: JSON.stringify(this.elements.address.value)
+        }; 
+        /*
+        let response = await fetch('api/parse/', options);
+        if (response.ok) { // if HTTP-status is 200-299 //step 4
+        // get the response body (the method explained below)
+          let json = await response.json();
+          document.getElementById("address-results").style ="";
+          document.getElementById("demo").innerHTML = json.getObject("address_components");
+          let li = `<tr><th>Name</th><th>Email</th></tr>`;
+       
+          // Loop through each data and add a table row
+          json.forEach(user => {
+            li += `<tr>
+                <td>${user.name} </td>
+                <td>${user.email}</td>        
+            </tr>`;
+          });
+  
+          // Display result
+          document.getElementById("INSERTNAME").innerHTML = li;
+          } else {
+            alert("HTTP-Error: " + response.status); // change to send server-side error information
+          }
+        */
+      }); 
     /*function parseAddress() {
       //get usr information
       //String usrInput = form.address.value;
