--- a/parserator_web/templates/parserator_web/index.html
+++ b/parserator_web/templates/parserator_web/index.html
@@ -26,7 +26,6 @@
             <tr>
               <th>Address part</th>
               <th>Tag</th>
-              <p id="demo"></p>
             </tr>
           </thead>
           <tbody id="table-body">
@@ -39,180 +38,33 @@
 {% endblock %}
 
 {% block extra_js %}
-  <script type="text/javascript">
-   // connect form to api  -- step3
-    //const csrftoken = document.querySelector('[name=csrfmiddlewaretoken]').value; 
+  <script type="text/javascript"> 
     document.querySelector('#form').addEventListener('submit', 
       async function() {
         event.preventDefault();
-        document.getElementById("address-results").style ="";
-        document.getElementById("demo").innerHTML = this.elements.address.value;
-        const headers = new Headers({
-          "Content-Type": "application/json"//,
-          //"Content-Length": JSON.stringify(body).length
+        document.getElementById("parse-type").textContent = "";//clear previous
+        document.getElementById("table-body").innerHTML = "";//clear previous
+        let parse_url = 'api/parse/?' + new URLSearchParams({
+           input_string: this.elements.address.value.toString()
         });
-
-        const options = {
-          method: "get",
-          headers: headers,
-          body: JSON.stringify(this.elements.address.value)
-        };
-        let response = await fetch('api/parse/');//, options);
+        let response = await fetch(parse_url);
+        let json = await response.json();
+        document.getElementById("address-results").style =""; //shows the bottom part of page
         if (response.ok) {
-          let json = await response.json();
           let street_components = JSON.parse(JSON.stringify(json.address_components));
           let street_type = json.address_type;
           document.getElementById("parse-type").textContent += street_type;
           let li = ``;
           Object.entries(street_components).forEach(([key, value]) => {
-            //alert(`${key} ${value}`);
             li +=`<tr>
                     <td>${value}</td>        
                     <td>${key} </td>
                   </tr>`;
-            //document.getElementById("address-results").append("<tr> <td> ${key} </td> <td> ${value} </td> </tr>");
           });
           document.getElementById("table-body").innerHTML = li;
-          //document.getElementById(“parse-type”).append(street_type);
-        }else{
-          alert("fuck"); // handle errors on parse
-        }
-
-        //alert(myobj.StreetName);
-        //alert(response)
-        //let response = fetch('api/parse/')
-        //if () { // if HTTP-status is 200-299 //step 4
-        // get the response body (the method explained below)
-
-          //let json = response.json();
-         // alert("hereeee, finally")
-        //}else{
-         // alert("fuckity")
-        //}  
-  //      alert(json.toString())
-    //    document.getElementById("address-results").style ="";
-
-      //  document.getElementById("demo").innerHTML = json.getObject("address_components");
-          //let li = `<tr><th>Name</th><th>Email</th></tr>`;
-       
-          // Loop through each data and add a table row
-          //json.forEach(user => {
-           // li += `<tr>
-           //     <td>${user.name} </td>
-           //     <td>${user.email}</td>        
-           // </tr>`;
-          //});
-  
-          // Display result
-          //document.getElementById("INSERTNAME").innerHTML = li;
-          //} else {
-          //  document.getElementById("demo").innerHTML = "you fucked up"; // change to send server-side error information
-          //}
-        //.then(response => response.json())
-        //.then(data => {
-        //  alert(response);
-      //})
-        //.catch((error) => {
-        //    alert(error);
-        //});
-        //alert(response['address_components']);
-        //if (response.ok) { // if HTTP-status is 200-299 //step 4
-        // get the response body (the method explained below)
-//        let json = response.json();
-  //      alert(json.toString())
-    //    document.getElementById("address-results").style ="";
-
-      //  document.getElementById("demo").innerHTML = json.getObject("address_components");
-          //let li = `<tr><th>Name</th><th>Email</th></tr>`;
-       
-          // Loop through each data and add a table row
-          //json.forEach(user => {
-           // li += `<tr>
-           //     <td>${user.name} </td>
-           //     <td>${user.email}</td>        
-           // </tr>`;
-          //});
-  
-          // Display result
-          //document.getElementById("INSERTNAME").innerHTML = li;
-          //} else {
-          //  document.getElementById("demo").innerHTML = "you fucked up"; // change to send server-side error information
-          //}
-          
+        }else{//show error
+          document.getElementById("parse-type").textContent += json.error_message;
+        }      
       }); 
-    /*function parseAddress() {
-      //get usr information
-      //String usrInput = form.address.value;
-      document.getElementById("demo").innerHTML = form.address.value;
-      document.getElementById("address-results").style ="";
-      //document.getElementById("demo").innerHTML = form.address.value;
-    }
-    */
-      //create request
-     // const request = new Request(
-       // url: "address-parse",
-        //{headers: {'X-CSRFToken': csrftoken}},
-        //data: {"input_data": usrInput}
-      //);
-      /*
-      const headers = new Headers({
-        "Content-Type": "application/json"//,
-        //"Content-Length": JSON.stringify(body).length
-      });
-      const options = {
-        method: "get",
-        headers: headers,
-        body: JSON.stringify(usrInput)
-      };
-      let response = await fetch(url, options);
-
-      if (response.ok) { // if HTTP-status is 200-299
-      // get the response body (the method explained below)
-        let json = await response.json();
-        document.getElementById("address-results").style ="";
-        document.getElementById("demo").innerHTML = json.getObject("address_components");
-        //do something with json
-      } else {
-        alert("HTTP-Error: " + response.status); // change to send server-side error information
-      }
-    }
-      //fetch(request, {
-       // method: 'GET',
-       // mode: 'same-origin'
-      //}).then(function(response) {
-        //handle errors
-       // document.getElementById("address-results").style ="";
-        //document.getElementById("demo").innerHTML = response['address_components'];
-        //document.getElementById("demo").innerHTML = usrInput;
-        //do something with response -- step 4
-      //});
-    //}
-
-    */
-
-
-
-
-
-
-//      var usrInput = document.getElementById("address").value;
-  //    $.ajax({
-    //        url: "api/parse/",
-      //      method: 'get',
-        //    data: {"input_data": usrInput},
-          //  dataType: "text",
-            ///contentType: "application/json",
-          //  error: function(xhr, status, error) {
-            //  console.log("error") //expand for all the error messages that I craft in GET
-           // }
-         // }) 
-         // .done(function(data) {
-           // console.log("good") //step 4, fill out table
-          //});
-      //django request
-      
-  //  }
-    /* TODO: Flesh this out to connect the form to the API and render results
-    in the #address-results div. */
-  </script>
+      </script>
 {% endblock %}
