Cleaned up get and parse methods in views.py. Changed script tag in index.html. Still working on javascript and displaying output to page.

--- a/parserator_web/templates/parserator_web/index.html
+++ b/parserator_web/templates/parserator_web/index.html
@@ -38,5 +38,6 @@
 {% endblock %}
 
 {% block extra_js %}
-  <script src="{% static 'js/index.js' %}"></script>
+  <!-- <script src="{% static 'js/index.js' %}"></script> -->
+  <script type="text/javascript" src="../../static/js/index.js"></script>
 {% endblock %}
