--- a/parserator_web/templates/parserator_web/index.html
+++ b/parserator_web/templates/parserator_web/index.html
@@ -17,6 +17,12 @@
           <button id="submit" type="submit" class="btn btn-success mt-3">Parse!</button>
         </form>
       </div>
+      <br>
+      <!-- Displays Error here. -->
+      <div id="error" style="display:none">
+        <h4>Error</h4>
+        <p>Please reformat your input and try again.</p>
+      </div>
       <!-- Displays parsed address components here. -->
       <div id="address-results" style="display:none">
         <h4>Parsing results</h4>
