--- a/parserator_web/templates/parserator_web/index.html
+++ b/parserator_web/templates/parserator_web/index.html
@@ -19,7 +19,7 @@
       </div>
       <br>
       <!-- Displays Error here. -->
-      <div id="error" style="display:none">
+      <div id="error" style="background-color: red; color: white; padding: 5px;" style="display:none">
         <h4>Error</h4>
         <p>Please reformat your input and try again.</p>
       </div>
