--- a/parserator_web/templates/parserator_web/index.html
+++ b/parserator_web/templates/parserator_web/index.html
@@ -19,9 +19,9 @@
       </div>
       <br>
       <!-- Displays Error here. -->
-      <div id="error" style="background-color: red; color: white; padding: 5px;" style="display:none">
+      <div id="error" style="background-color: red; color: white; padding: 5px; display:none;">
         <h4>Error</h4>
-        <p id="error-message">Please reformat your input and try again.</p>
+        <p id="error-message"></p>
       </div>
       <!-- Displays parsed address components here. -->
       <div id="address-results" style="display:none">
