--- a/parserator_web/templates/parserator_web/index.html
+++ b/parserator_web/templates/parserator_web/index.html
@@ -11,7 +11,7 @@
       <p>Dealing with some messy or unstructured addresses? We can parse them for you.</p>
       <div class="card card-body bg-light">
         <p><strong>Try it out!</strong> Parse an address in the United States into fields like <code>AddressNumber</code>, <code>StreetName</code> and <code>ZipCode</code>.</p>
-        <form class="form" role="form" action="/api/parse/" method="GET">
+        <form class="form" role="form">
           {% csrf_token %}
           <input name="address" type="text" class="form-control" id="address" placeholder="123 Main St. Suite 100 Chicago, IL">
           <button id="submit" type="submit" class="btn btn-success mt-3">Parse!</button>
@@ -24,8 +24,8 @@
         <table class="table table-bordered">
           <thead>
             <tr>
-              <th>Address part</th>
-              <th>Tag</th>
+              <th class="address-part">Address part</th>
+              <th class="tag">Tag</th>
             </tr>
           </thead>
           <tbody>
