--- a/parserator_web/templates/parserator_web/index.html
+++ b/parserator_web/templates/parserator_web/index.html
@@ -17,15 +17,18 @@
           <button id="submit" type="submit" class="btn btn-success mt-3">Parse!</button>
         </form>
       </div>
-      <!-- TODO: Display parsed address components here. -->
+      <div class="error card-body bg-light" style="display:none">
+        <h3>Sorry, we had trouble parsing your address!</h3>
+        <p>Please double-check that your address is valid and try submitting again.</p>
+      </div>
       <div id="address-results" style="display:none">
         <h4>Parsing results</h4>
         <p>Address type: <strong><span id="parse-type"></span></strong></p>
         <table class="table table-bordered">
           <thead>
             <tr>
-              <th class="address-part">Address part</th>
-              <th class="tag">Tag</th>
+              <th>Address part</th>
+              <th>Tag</th>
             </tr>
           </thead>
           <tbody>
