refactor code for display and request submission

--- a/parserator_web/templates/parserator_web/index.html
+++ b/parserator_web/templates/parserator_web/index.html
@@ -19,12 +19,12 @@
       </div>
       <br>
       <div id="address-results" style="display:none">
-        <!-- Displays Error here. -->
+        <!-- Display Errors here. -->
         <div id="error" style="background-color: red; color: white; padding: 5px; display:none;">
           <h4>Error</h4>
           <p id="error-message"></p>
         </div>
-        <!-- Displays Parsed Components here. -->
+        <!-- Display Parsed Components here. -->
         <div id="success" style="display:none">
           <h4>Parsing results</h4>
           <p>Address type: <strong><span id="parse-type"></span></strong></p>
