--- a/parserator_web/templates/parserator_web/index.html
+++ b/parserator_web/templates/parserator_web/index.html
@@ -21,7 +21,7 @@
         <h3>Sorry, we had trouble parsing your address!</h3>
         <p>Please double-check that your address is valid and try submitting again.</p>
       </div>
-      <div id="address-results" style="display:none">
+      <div class="card-body bg-light" id="address-results" style="display:none">
         <h4>Parsing results</h4>
         <p>Address type: <strong><span id="parse-type"></span></strong></p>
         <table class="table table-bordered">
