Completed Step 4 (display results from address request via index.html. Completed error handling display for RepeatedLabelError

--- a/parserator_web/templates/parserator_web/index.html
+++ b/parserator_web/templates/parserator_web/index.html
@@ -18,7 +18,7 @@
         </form>
       </div>
       <!-- TODO: Display parsed address components here. -->
-      <div id="address-results" style="display:none">
+      <div id="address-results" >
         <h4>Parsing results</h4>
         <p>Address type: <strong><span id="parse-type"></span></strong></p>
         <table class="table table-bordered">
@@ -38,5 +38,5 @@
 {% endblock %}
 
 {% block extra_js %}
-  <script src="{% static 'js/index.js' %}"></script>
+  <script src="{% static 'js/index.js' %}" defer></script>
 {% endblock %}
