--- a/parserator_web/templates/parserator_web/index.html
+++ b/parserator_web/templates/parserator_web/index.html
@@ -17,7 +17,7 @@
           <button id="submit" type="submit" class="btn btn-success mt-3">Parse!</button>
         </form>
       </div>
-      <!-- TODO: Display parsed address components here. -->
+       <!-- Display parsed address components here. -->
       <div id="address-results" style="display:none">
         <h4>Parsing results</h4>
         <p>Address type: <strong><span id="parse-type"></span></strong></p>
@@ -28,7 +28,8 @@
               <th>Tag</th>
             </tr>
           </thead>
-          <tbody>
+          <tbody id="table-body">
+            <!-- additional table rows go here -->
           </tbody>
         </table>
       </div>
