--- a/parserator_web/templates/parserator_web/index.html
+++ b/parserator_web/templates/parserator_web/index.html
@@ -20,6 +20,7 @@
        <!-- Display parsed address components here. -->
       <div id="address-results" style="display:none">
         <h4>Parsing results</h4>
+        <p>Entered address: <strong><span id="address-string"></span></strong></p>
         <p>Address type: <strong><span id="parse-type"></span></strong></p>
         <table class="table table-bordered">
           <thead>
