tried for some changes

--- a/parserator_web/templates/parserator_web/index.html
+++ b/parserator_web/templates/parserator_web/index.html
@@ -84,7 +84,16 @@
           }
 
         }) 
-        .catch(err => console.log(err))
+        .catch(err => {
+
+          document.querySelector("#address-results").style.display = '';
+          let fullError =  `Please try another address: ${err}!`;
+          let tableHead = document.querySelector("thead");
+          tableHead.innerHTML = '';
+          let hiParagraph = document.querySelector('#hi');
+          hiParagraph.innerHTML = fullError;
+
+        })
        
     };
 
